--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <h2>Abrar</h2>
     <h3>Ismail</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis non doloremque quasi eaque repellendus veniam aperiam ex quos dolorum nesciunt?</p>
+ <h1> ami ajke notun git shikhbo</h1>
+
+
+
 
 </body>
 </html>
