my ordered and un ordered list try

--- a/index.html
+++ b/index.html
@@ -15,6 +15,30 @@
  <h1> ami ajke notun git shikhbo</h1>
 
 
+ <ul type="1">
+
+    <b><li>pizza</li>
+        <li>burger</li>
+        <li>somucha</li>
+        <li>sandwitch</li></b>
+
+
+        <ol type="a">
+
+
+            <li>pizza</li>
+            <li>burger</li>
+            <li>somucha</li>
+            <li>sandwitch</li>
+        </ol>
+
+
+
+
+
+ </ul>
+
+
 
 
 </body>
